--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,11 @@
 name = "egm"
 type = "javascript"
-build = { command = "npm install --legacy-peer-deps && npm run build", cwd = "." }
+
+[build]
+command = "npm install --legacy-peer-deps && npm run build"
+cwd = "."
+upload = { format = "directory", path = "./dist" }
+
+[env.production]
+pages_build_output_dir = "dist"
+
