--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ type = "javascript"
 
 [build]
 command = "npm install --legacy-peer-deps && npm run build"
-upload = { format = "directory", path = "./dist" }
+upload = { format = "directory", path = "dist" }
 
 [env.production]
-pages_build_output_dir = "dist"
+pages_build_output_dir = "./dist"
