--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.28.0",
     "react-speech-kit": "^3.0.1",
+    "react-swipeable": "^7.0.2",
     "wrangler": "^3.83.0"
   },
   "devDependencies": {
